--- a/apple-homepage/public/styles.css
+++ b/apple-homepage/public/styles.css
@@ -570,7 +570,6 @@ embed,
 object {
   display: block;
   /* 1 */
-  vertical-align: middle;
   /* 2 */
 }
 
@@ -6581,6 +6580,12 @@ video {
 
 .min-h-screen {
   min-height: 100vh;
+}
+
+@media (min-width:500px) {
+  .min-h-home-lg {
+    min-height: 75vh;
+  }
 }
 
 .w-0 {
